// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    class="sui-facet"
  >
    <div>
      <div
        class="sui-facet__title"
      >
        Facet
      </div>
      <ul
        class="sui-single-option-facet"
      >
        <li
          class="sui-single-option-facet__item"
        >
          <a
            class="sui-single-option-facet__link"
            data-transaction-name="facet - Facet"
            href="/"
          >
            1
          </a>
           
          <span
            class="sui-facet__count"
          >
            1
          </span>
        </li>
        <li
          class="sui-single-option-facet__item"
        >
          <a
            class="sui-single-option-facet__link"
            data-transaction-name="facet - Facet"
            href="/"
          >
            2
          </a>
           
          <span
            class="sui-facet__count"
          >
            1
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders falsey values correctly 1`] = `
<div>
  <div
    class="sui-facet"
  >
    <div>
      <div
        class="sui-facet__title"
      >
        Facet
      </div>
      <ul
        class="sui-single-option-facet"
      >
        <li
          class="sui-single-option-facet__item"
        >
          <a
            class="sui-single-option-facet__link"
            data-transaction-name="facet - Facet"
            href="/"
          >
            0
          </a>
           
          <span
            class="sui-facet__count"
          >
            10
          </span>
        </li>
        <li
          class="sui-single-option-facet__item"
        >
          <a
            class="sui-single-option-facet__link"
            data-transaction-name="facet - Facet"
            href="/"
          >
            false
          </a>
           
          <span
            class="sui-facet__count"
          >
            20
          </span>
        </li>
        <li
          class="sui-single-option-facet__item"
        >
          <a
            class="sui-single-option-facet__link"
            data-transaction-name="facet - Facet"
            href="/"
          />
           
          <span
            class="sui-facet__count"
          >
            30
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
